# api/docs/swagger.yaml
@@ -165,7 +165,11 @@ definitions:
     properties:
       barcode:
         type: string
+      branch_id:
+        type: string
       branch_name:
+        type: string
+      category_id:
         type: string
       category_name:
         type: string
@@ -973,6 +977,39 @@ paths:
           schema:
             $ref: '#/definitions/http.ErrorResp'
       summary: Update an existing coming_table
+      tags:
+      - coming_tables
+  /coming_tables/do-income/{coming_table_id}:
+    get:
+      consumes:
+      - application/json
+      description: Do Income Coming table to Remainings
+      parameters:
+      - description: Coming table ID to retrieve
+        in: path
+        name: coming_table_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/http.ErrorResp'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/http.ErrorResp'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/http.ErrorResp'
+      summary: Do Income Coming table to Remainings
       tags:
       - coming_tables
   /coming_tables/scan-barcode/{coming_table_id}:
